--- a/TheShadowRealm/.gitignore
+++ b/TheShadowRealm/.gitignore
@@ -1,4 +1,5 @@
-# This .gitignore file should be placed at the root of your Unity project directory
+#
+#:This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
@@ -21,6 +22,9 @@
 
 # Visual Studio cache directory
 .vs/
+
+# Idea Project chache directory
+.idea/
 
 # Gradle cache directory
 .gradle/
